--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-image-crop": "^10.0.8",
     "swiper": "^8.4.4"
   },
   "devDependencies": {
