--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@chakra-ui/react": "^2.3.5",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@types/next-auth": "^3.15.0",
+    "faunadb": "^4.7.1",
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
+    "next-auth": "^4.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
