--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.5",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@prismicio/client": "^6.7.1",
+    "@prismicio/helpers": "^2.3.5",
+    "@prismicio/react": "^2.5.0",
+    "@prismicio/slice-simulator-react": "^0.2.2",
     "@types/next-auth": "^3.15.0",
+    "axios": "^1.1.3",
     "faunadb": "^4.7.1",
     "framer-motion": "^7.5.3",
+    "imgur": "^2.2.0",
     "next": "12.3.1",
     "next-auth": "^4.16.4",
     "react": "18.2.0",
@@ -24,11 +31,13 @@
     "swiper": "^8.4.4"
   },
   "devDependencies": {
+    "@prismicio/types": "^0.2.3",
     "@types/node": "18.8.5",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "slice-machine-ui": "^0.5.2",
     "typescript": "4.8.4"
   }
 }
