--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/next-auth": "^3.15.0",
     "axios": "^1.1.3",
     "faunadb": "^4.7.1",
+    "form-data": "^4.0.0",
     "framer-motion": "^7.5.3",
     "imgur": "^2.2.0",
     "next": "12.3.1",
