--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@prismicio/client": "^6.7.1",
     "@prismicio/helpers": "^2.3.5",
     "@prismicio/react": "^2.5.0",
-    "@prismicio/slice-simulator-react": "^0.2.2",
     "@types/next-auth": "^3.15.0",
     "axios": "^1.1.3",
     "faunadb": "^4.7.1",
@@ -29,7 +28,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-image-crop": "^10.0.8",
-    "swiper": "^8.4.4"
+    "swiper": "^8.4.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@prismicio/types": "^0.2.3",
@@ -39,6 +39,7 @@
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "slice-machine-ui": "^0.5.2",
+    "@prismicio/slice-simulator-react": "^0.2.2",
     "typescript": "4.8.4"
   }
 }
