--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-image-crop": "^10.0.8",
+    "react-router-dom": "^6.5.0",
     "swiper": "^8.4.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@prismicio/slice-simulator-react": "^0.2.2",
     "@prismicio/types": "^0.2.3",
     "@types/node": "18.8.5",
     "@types/react": "18.0.21",
@@ -39,7 +41,6 @@
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "slice-machine-ui": "^0.5.2",
-    "@prismicio/slice-simulator-react": "^0.2.2",
     "typescript": "4.8.4"
   }
 }
