--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-easy-crop": "^4.6.3",
     "react-icons": "^4.6.0",
     "react-image-crop": "^10.0.8",
     "react-router-dom": "^6.5.0",
