--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.3.5",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@chakra-ui/react": "^2.4.6",
+    "@chakra-ui/theme": "^2.2.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
     "@next-auth/fauna-adapter": "^1.0.4",
     "@prismicio/client": "^6.7.1",
     "@prismicio/helpers": "^2.3.5",
@@ -21,7 +23,7 @@
     "axios": "^1.1.3",
     "faunadb": "^4.7.1",
     "form-data": "^4.0.0",
-    "framer-motion": "^8.0.2",
+    "framer-motion": "^8.2.4",
     "imgur": "^2.2.0",
     "next": "12.3.1",
     "next-auth": "^4.18.6",
@@ -29,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-easy-crop": "^4.6.3",
+    "react-hook-form": "^7.41.5",
     "react-icons": "^4.6.0",
     "react-image-crop": "^10.0.8",
     "react-router-dom": "^6.5.0",
@@ -43,7 +46,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
-    "slice-machine-ui": "^0.5.2",
+    "slice-machine-ui": "^0.6.0",
     "typescript": "4.8.4"
   }
 }
