--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@prismicio/react": "^2.5.0",
     "@types/next-auth": "^3.15.0",
     "axios": "^1.1.3",
+    "compress.js": "^1.2.2",
+    "fast-levenshtein": "^3.0.0",
     "faunadb": "^4.7.1",
     "form-data": "^4.0.0",
     "framer-motion": "^8.2.4",
@@ -36,6 +38,7 @@
     "react-image-crop": "^10.0.8",
     "react-router-dom": "^6.5.0",
     "swiper": "^8.4.4",
+    "unique-username-generator": "^1.1.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
