--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.41.5",
     "react-icons": "^4.6.0",
     "react-image-crop": "^10.0.8",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.5.0",
     "swiper": "^8.4.4",
     "unique-username-generator": "^1.1.3",
