--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@prismicio/client": "^6.7.1",
     "@prismicio/helpers": "^2.3.5",
     "@prismicio/react": "^2.5.0",
+    "@reach/combobox": "^0.18.0",
+    "@react-google-maps/api": "^2.17.1",
     "@types/next-auth": "^3.15.0",
     "axios": "^1.1.3",
     "compress.js": "^1.2.2",
@@ -40,6 +42,7 @@
     "react-router-dom": "^6.5.0",
     "swiper": "^8.4.4",
     "unique-username-generator": "^1.1.3",
+    "use-places-autocomplete": "^4.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
