--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
     "@next-auth/fauna-adapter": "^1.0.4",
-    "@prismicio/client": "^6.7.1",
-    "@prismicio/helpers": "^2.3.5",
-    "@prismicio/react": "^2.5.0",
     "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.17.1",
     "@types/next-auth": "^3.15.0",
     "axios": "^1.1.3",
+    "canvas": "^2.11.0",
     "compress.js": "^1.2.2",
     "fast-levenshtein": "^3.0.0",
     "faunadb": "^4.7.1",
@@ -42,8 +40,7 @@
     "react-router-dom": "^6.5.0",
     "swiper": "^8.4.4",
     "unique-username-generator": "^1.1.3",
-    "use-places-autocomplete": "^4.0.0",
-    "yup": "^0.32.11"
+    "use-places-autocomplete": "^4.0.0"
   },
   "devDependencies": {
     "@prismicio/slice-simulator-react": "^0.2.2",
