--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
+    "@auth/supabase-adapter": "^1.10.0",
     "@chakra-ui/react": "^2.4.9",
     "@chakra-ui/theme": "^2.2.4",
     "@cloudinary/url-gen": "^1.9.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
-    "@next-auth/fauna-adapter": "^1.0.4",
+    "@next-auth/supabase-adapter": "^0.2.1",
+    "@prisma/adapter-pg": "^6.10.1",
+    "@prisma/client": "6.9.0",
     "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.17.1",
+    "@supabase/supabase-js": "^2.50.0",
     "@types/next-auth": "^3.15.0",
     "axios": "^1.1.3",
     "canvas": "^2.11.0",
     "compress.js": "^1.2.2",
     "fast-levenshtein": "^3.0.0",
-    "faunadb": "^4.7.1",
     "form-data": "^4.0.0",
     "framer-motion": "^8.5.0",
     "imgur": "^2.2.0",
@@ -51,7 +55,9 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "prisma": "^6.9.0",
     "slice-machine-ui": "^0.6.0",
+    "tsx": "^4.19.4",
     "typescript": "4.8.4"
   }
 }
